# rush-mog

./: .gitignore  README.md
hardware/: README.md
hardware/ago/: ago.kicad_prl  ago.kicad_pro  ago.kicad_sch
software/: README.md  ago.mdj
software/audio_control/: README.md  ago-audio.hd  ago-vedio.hd
software/code/inc/: controller.h  motor_driver.h  ps2_receiver.h
software/code/pt/: example-codelock.c  pt-sem.h
software/code/src/: CMakeLists.txt  led_group.c  main.c  pca9685.c  servos_driver.c
software/main_control/: CMakeLists.txt  README.md  build-eclipse.sh  code-format.sh  gimbal.mdj
software/main_control/APP/: Dbg.c  Dbg.h  includes.h  key.c  key.h  led.c  led.h  main.c  ringbuff.c  servo.c  servo.h  systick.c  systick.h  usart.c  usart.h
software/main_control/APP/inc/: command_receiver.h  led_group.h  log.h
software/main_control/APP/pt/: lc-addrlabels.h  lc-switch.h  lc.h
software/main_control/APP/src/: motor_driver.c  ps2_receiver.c
software/main_control/CMake/: GNU-ARM-Toolchain.cmake  platform.cmake
software/main_control/CMake/Modules/: FindOpenocd.cmake
software/main_control/CORE/: stm32f4xx.h  stm32f4xx_conf.h
software/main_control/FreeRTOS/include/: FreeRTOSConfig.h
software/main_control/Project/: JLinkLog.txt  Project.uvguix.MSI-NB  Project.uvguix.XH  Project.uvoptx  Project.uvprojx
software/main_control/Project/Listings/: Project.map  startup_stm32f40_41xxx.lst
software/main_control/Project/Objects/: Project.axf  Project.build_log.htm  Project.hex  Project.htm  Project.lnp  Project_Targets.dep  communication.crf  communication.d  croutine.crf  croutine.d  dbg.crf  dbg.d  event_groups.crf  event_groups.d  heap_4.crf  heap_4.d  key.crf  key.d  led.crf  led.d  list.crf  list.d  main.crf  main.d  misc.crf  misc.d  port.crf  port.d  queue.crf  queue.d  ring_buf.crf  ring_buf.d  ring_buff.crf  ring_buff.d  ringbuff.crf  ringbuff.d  servo.crf  servo.d  stm32f4xx_gpio.crf  stm32f4xx_gpio.d  (+20 more)
software/main_control/STM32F1/: CMakeLists.txt
software/main_control/STM32F1/core/: CMakeLists.txt
software/main_control/STM32F1/core/src/: system_stm32f10x.c
software/main_control/STM32F1/std_peripheral/: CMakeLists.txt
software/main_control/STM32F1/std_peripheral/inc/cmsis/: README.md
software/main_control/STM32F1/std_peripheral/inc/cmsis/device/: stm32f10x.h
software/main_control/User/Source/: led.c  main.c  sys.c
software/main_control/inc/: music_switch.h  pca9685.h  servos_driver.h
software/main_control/linker/: stm32f103c8.ld
software/main_control/pt/: example-buffer.c  example-small.c  pt.h
software/main_control/src/: CMakeLists.txt  controller.c  log.c  music_switch.c
software/main_control/src/inc/: arm_roboot_executor.h  attitude_executor.h  audio_receiver.h  command.h  controller.h  led_display.h  log.h  roboot_executor.h  stm32f10x_it.h  task_manager.h  timer.h  timer_executor.h  timer_manager.h  uart_log.h  vedio_executor.h  vedio_receiver.h  vehicle_executor.h  version.h  version.h.in  video_executor.h  video_receiver.h
software/main_control/src/inc/driver/: iic.h  mpu6050.h  oled.h  oledfont.h  pwm.h  stm32_pca9685.h  sys.h  tof.h
software/main_control/src/inc/oled/: oled.h  oledfont.h
software/main_control/src/inc/protocol/: iic.h  sys.h  uart_log.h
software/main_control/src/src/: arm_roboot_executor.c  attitude_executor.c  audio_receiver.c  command.c  controller.c  led_display.c  log.c  main.c  roboot_executor.c  stm32f10x_it.c  task_manager.c  timer.c  timer_executor.c  timer_manager.c  uart_log.c  vedio_executor.c  vedio_receiver.c  vehicle_executor.c  video_executor.c
software/main_control/src/src/driver/: iic.c  mpu6050.c  oled.c  pca9685.c  pwm.c  readme.md  stm32_pca9685.c  tof.c
software/main_control/src/src/oled/: oled.c
software/main_control/src/src/protocol/: delay.c  iic.c  sys.c  uart_log.c
software/main_control/tools/: format.sh  gdbinit  stm32f103c8-jlink.cfg
software/remote_center/: README.md
software/vedio_control/: ago-vedio.hd
software/video_control/: README.md
